# access_approval_pam

./: CMakeLists.txt  Makefile  config.sh
src/: config.h.in  pam_access_approval.c  pam_demo.c  pam_module.c
